--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,13 +1,16 @@
 {
-  "extends": "../tsconfig.json",
+  "experimentalDecorators": true,
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "es2015",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
