--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@angular-devkit/core": "^10.0.2",
     "@angular/animations": "^10.0.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "^10.0.3",
     "@angular/compiler": "^10.0.3",
     "@angular/core": "^10.0.3",
     "@angular/forms": "^10.0.3",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "^10.0.3",
     "@angular/platform-browser-dynamic": "^10.0.3",
     "@angular/router": "^10.0.3",
@@ -26,6 +28,8 @@
     "core-js": "^2.4.1",
     "firebase": "^7.16.0",
     "instantsearch.js": "^3.7.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.3.0-rc.1",
     "rxjs": "^6.6.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^2.0.0",
